# langhub

./: Cargo.toml  README.md  README_zh-CN.md
langhub-core/: Cargo.toml  README.md  README_zh-CN.md
langhub-core/src/: lib.rs  types.rs
langhub-core/src/llms/: alibaba.rs  anthropic.rs  azure.rs  baichuan.rs  baidu.rs  cohere.rs  deepseek.rs  fireworks.rs  google.rs  groq.rs  huggingface.rs  minimax.rs  mistral.rs  mod.rs  moonshot.rs  openai.rs  perplexity.rs  replicate.rs  tencent.rs  together.rs  yi.rs  zhipu.rs
langhub-core/tests/: simple_test.rs
langhub-macro/: Cargo.toml  README.md  README_zh-CN.md
langhub-macro/src/: lib.rs
langhub-macro/tests/: test.rs
src/: lib.rs  types.rs
src/llms/: alibaba.rs  anthropic.rs  azure.rs  baichuan.rs  baidu.rs  cohere.rs  custom.rs  deepseek.rs  fireworks.rs  google.rs  groq.rs  huggingface.rs  minimax.rs  mistral.rs  mod.rs  moonshot.rs  openai.rs  perplexity.rs  replicate.rs  tencent.rs  together.rs  yi.rs  zhipu.rs
tests/: test.rs
