[package]
name = "langchain-sdk"
version = "0.1.0"
edition = "2024"
authors = ["happyboy <superhappyboy1995@gmail.com>"]
description = "An LLM application development framework based on Rust."
keywords = ["ai", "llm", "llms", "langchain"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/0xhappyboy/langchain-sdk"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
