[package]
name = "langhub-core"
version = "0.1.3"
edition = "2024"
authors = ["happyboy <superhappyboy1995@gmail.com>"]
description = "The core framework of LangHub is called Crates."
keywords = ["ai", "llm", "llms", "langchain"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/0xhappyboy/langchain-sdk"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
