[package]
name = "langhub-macro"
version = "0.1.2"
edition = "2024"
authors = ["happyboy <superhappyboy1995@gmail.com>"]
description = "Includes all macros of the langhub framework"
keywords = ["langhub", "macro", "llm", "ai"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/0xhappyboy/langhub/tree/main/langhub-macro"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
langhub-core = "0.1.3"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
